crates/service/tests/formatting/snapshots/features__formatting__full__format_comments.snap
---
source: crates/service/tests/formatting/full.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 2
      },
      "end": {
        "line": 0,
        "character": 2
      }
    },
    "newText": " "
  },
  {
    "range": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 9
      }
    },
    "newText": "\n"
  }
]
