crates/service/tests/formatting/snapshots/features__formatting__full__non_ascii.snap
---
source: crates/service/tests/formatting/full.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 0
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 8
      },
      "end": {
        "line": 3,
        "character": 12
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 7
      },
      "end": {
        "line": 4,
        "character": 7
      }
    },
    "newText": "\n   "
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 21
      },
      "end": {
        "line": 5,
        "character": 2
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 3
      },
      "end": {
        "line": 6,
        "character": 0
      }
    },
    "newText": ""
  }
]
