crates/service/tests/formatting/snapshots/features__formatting__full__space4.snap
---
source: crates/service/tests/formatting/full.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 1,
        "character": 0
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 2
      },
      "end": {
        "line": 2,
        "character": 2
      }
    },
    "newText": "  "
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 4
      },
      "end": {
        "line": 3,
        "character": 4
      }
    },
    "newText": "    "
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 17
      },
      "end": {
        "line": 4,
        "character": 2
      }
    },
    "newText": ""
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 3
      },
      "end": {
        "line": 5,
        "character": 0
      }
    },
    "newText": ""
  }
]
